@@ -1,3 +1,7 @@
+2009-07-02  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* ContractDescriptionTest.cs : added test for derived contract type.
+
 2009-06-09  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* ServiceThrottlingBehaviorTest.cs : new.
