@@ -1,3 +1,8 @@
+2009-07-02  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* ContractDescriptionGenerator.cs : do not reject derived service
+	  contract from another service contract type.
+
 2009-06-10  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* ServiceThrottlingBehavior.cs : implement Validate() (nothing to do
